# microblog

./: .bazelignore  .bazelrc  .env.docker.example  .gitignore  .output.txt  AGENT_EXPERIENCE_QUICK_START.md  BAZEL_GUIDE.md  BUILD.bazel  COMPLETE_QUALITY_SYSTEM.md  DEPLOYMENT.md  DOCKER.md  INNER_LOOP_IMPLEMENTATION.md  KUBERNETES.md  LINEAR_ISSUES_AGENT_EXPERIENCE.md  MASTERY_GUIDE.md  MOTION_SYSTEM_COMPLETE.md  Makefile  OUTER_LOOP_IMPLEMENTATION.md  PRE_COMMIT_GUIDE.md  QUICKSTART.md  README.md  REDESIGN_COMPLETE.md  SEEDING_GUIDE.md  TESTING.md  UX_GAP.md  WORKSPACE.bazel  apiarch.md  bazel-bin  bazel-microblog  bazel-out  bazel-testlogs  docker-compose.dev.yml  docker-compose.yml  framework.md  run_dev.sh  run_lint_fix.sh  setup.sh  sync_types.sh
.github/workflows/: ci.yml  codeql.yml  deploy-staging.yml
k8s/: backend.yaml  config.yaml  db.yaml  frontend.yaml
microblog-api/: README.md  pom.xml
microblog-api/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
microblog-api/src/main/kotlin/com/microblog/: GreetingResource.kt  MyKotlinEntity.kt
microblog-api/src/main/kotlin/com/microblog/api/auth/: AuthResource.kt  TokenRequest.kt
microblog-api/src/main/kotlin/com/microblog/api/post/: CreatePostRequest.kt  Post.kt  PostAuthorDTO.kt  PostDTO.kt  PostResource.kt
microblog-api/src/main/kotlin/com/microblog/api/user/: RegisterUserRequest.kt  UpdateUserRequest.kt  User.kt  UserDTO.kt  UserResource.kt
microblog-api/src/main/resources/: application.properties
microblog-api/src/test/kotlin/com/microblog/: GreetingResourceIT.kt  GreetingResourceTest.kt
microblog-api/src/test/kotlin/com/microblog/api/post/: CreatePostRequestTest.kt  PostDTOTest.kt  PostResourceTest.kt  PostTest.kt
microblog-next/: .dockerignore  .env.example  .gitignore  BUILD.bazel  DESIGN_SYSTEM.md  Dockerfile  Dockerfile.dev  README.md  VISUAL_TESTING_SETUP.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  run_build.sh  run_dev.sh  run_e2e.sh  run_e2e_mutations.sh  run_e2e_visual.sh  run_lint_check.sh  run_lint_fix.sh  run_test.sh  run_test_ui.sh  run_typecheck.sh  tailwind.config.ts  vitest.config.ts
microblog-next/e2e/: auth.spec.ts  follow.spec.ts  mutations.spec.ts  posts.spec.ts  progressive-enhancement.spec.ts  visual-quality.spec.ts
microblog-next/src/actions/: auth.ts  posts.ts  users.ts
microblog-next/src/app/: globals.css  layout.tsx
microblog-next/src/app/(app)/: error.tsx  loading.tsx  page.tsx
microblog-next/src/app/(app)/users/[userId]/: loading.tsx  page.tsx
microblog-next/src/app/(auth)/login/: page.tsx
microblog-next/src/app/(auth)/register/: page.tsx
microblog-next/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
microblog-next/src/components/layout/: Header.tsx  LogoutButton.tsx
microblog-next/src/components/posts/: CreatePostForm.tsx  PostCard.tsx
microblog-next/src/components/timeline/: EmptyTimeline.tsx  Timeline.tsx  TimelineClient.tsx  TimelineSkeleton.tsx
microblog-next/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  README.md  Textarea.tsx  Toast.tsx  index.ts
microblog-next/src/components/users/: FollowButton.tsx
microblog-next/src/lib/: api.ts  schemas.ts  session.ts  types.ts  utils.ts
microblog-next/src/lib/motion/: README.md  components.tsx  index.ts  presets.ts  utils.ts
microblog-next/tests/: setup.ts
microblog-next/tests/actions/: auth.test.ts  posts.test.ts
microblog-next/tests/components/: PostCard.test.tsx
microblog-next/tests/lib/: schemas.test.ts
microblog-python/: .dockerignore  .env.example  .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  run_dev.sh  run_format.sh  run_generate_types.sh  run_lint_check.sh  run_lint_fix.sh  run_migrate.sh  run_test.sh  run_typecheck.sh
microblog-python/alembic/: env.py
microblog-python/alembic/versions/: 20260120_1300_initial_schema.py
microblog-python/app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  middleware.py  rate_limit.py  security.py
microblog-python/app/db/: __init__.py  base.py  post.py  user.py
microblog-python/app/models/: __init__.py  auth.py  post.py  user.py
microblog-python/app/routers/: __init__.py  auth.py  posts.py  users.py
microblog-python/app/services/: posts.py  ranking.py  users.py
microblog-python/scripts/: README.md  demo_ranking.py  generate_types.py  seed.sh  seed_database.py
microblog-python/tests/: __init__.py  conftest.py  test_auth.py  test_models.py  test_posts.py  test_users.py
microblog-python/tests/services/: test_posts.py
microblog-web/: index.html  style.css
microblog-web/css/: style.css
microblog-web/js/: CreatePostForm.js  PostItem.js  PostsList.js  app.js  theme-toggle.js
scripts/: setup-pre-commit.sh  stress_test_rate_limit.py  test_k8s_deployment.sh  validate-schemas.sh
