package(default_visibility = ["//visibility:public"])

# Development server
genrule(
    name = "dev",
    outs = ["dev.sh"],
    cmd = "cp $(location run_dev.sh) $@ && chmod +x $@",
    srcs = ["run_dev.sh"],
    executable = True,
)

# Run all tests
genrule(
    name = "test",
    outs = ["test.sh"],
    cmd = "cp $(location run_test.sh) $@ && chmod +x $@",
    srcs = ["run_test.sh"],
    executable = True,
)

# Linting (check only)
genrule(
    name = "lint_check",
    outs = ["lint_check.sh"],
    cmd = "cp $(location run_lint_check.sh) $@ && chmod +x $@",
    srcs = ["run_lint_check.sh"],
    executable = True,
)

# Linting (with fix)
genrule(
    name = "lint_fix",
    outs = ["lint_fix.sh"],
    cmd = "cp $(location run_lint_fix.sh) $@ && chmod +x $@",
    srcs = ["run_lint_fix.sh"],
    executable = True,
)

# Format code
genrule(
    name = "format",
    outs = ["format.sh"],
    cmd = "cp $(location run_format.sh) $@ && chmod +x $@",
    srcs = ["run_format.sh"],
    executable = True,
)

# Type checking
genrule(
    name = "typecheck",
    outs = ["typecheck.sh"],
    cmd = "cp $(location run_typecheck.sh) $@ && chmod +x $@",
    srcs = ["run_typecheck.sh"],
    executable = True,
)

# Database migration
genrule(
    name = "migrate",
    outs = ["migrate.sh"],
    cmd = "cp $(location run_migrate.sh) $@ && chmod +x $@",
    srcs = ["run_migrate.sh"],
    executable = True,
)

# Generate TypeScript types
genrule(
    name = "generate_types",
    outs = ["generate_types.sh"],
    cmd = "cp $(location run_generate_types.sh) $@ && chmod +x $@",
    srcs = ["run_generate_types.sh"],
    executable = True,
)

# Fast checks for inner loop (convenience alias)
filegroup(
    name = "fast_checks",
    srcs = [
        ":lint_check",
        ":typecheck",
    ],
)
