[project]
name = "microblog-python"
version = "0.1.0"
description = "FastAPI backend for microblog - demonstrating modern Python patterns"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "requests>=2.31.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "psutil>=6.0.0",
    "faker>=30.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "pydantic-to-typescript>=1.0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
